<resources>
    <string name="app_name">WinningTicket</string>
    <string name="map_key">AIzaSyCvaxgh1utaNo0kwadF8Dbdl3SpNXpSkio</string>
    <string name="ads_unit_id">ca-app-pub-2954142127845511/7428227173</string>
    <string name="ads_app_id">ca-app-pub-2954142127845511~6637889686</string>
    <string name="finish_game_btn">Finish Game</string>
    <string name="more"> <![CDATA[MORE >]]></string>
    <string name="collapse"> <![CDATA[LESS<]]></string>
    <string-array name="states">
        <item>Choose a state</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>

    </string-array>
    <string name="create_account">Create an account</string>
    <string name="enter_player_code">Enter player code</string>
    <string name="enter_player_your_code">Enter your player code</string>
    <string name="No_this_is_not_me">No, this is not me.</string>
    <string name="Yes_Continue">Yes. Continue</string>
    <string name="is_this_you">Is this you?</string>
    <string name="verify_info">Verify that the code you entered matches up \nwith your information.</string>
    <string name="enter_player_your_code_text">Enter the seven-digit code given to you by \n your event organizer.</string>
    <string name="create_account_text">Signup to start participating in events \n Free everyday Play is also available.</string>
    <string name="empty_event">Finish setting up your \nWinning Ticket account</string>
    <string name="Alert_text">Finish setting up your Winning\n Ticket account.</string>
    <string name="event">EVENTS</string>
    <string name="course">COURSES</string>
    <string name="account">ACCOUNT</string>
    <string name="referral_name">Referral Name</string>
    <string name="referral_email_adrress">Referral Email Address</string>
    <string name="referral_phone_number">Referral Phone Number</string>
    <string name="choose_user_role">Choose User Role:</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="participant">Participant</string>
    <string name="affiliate">Affiliate</string>
    <string name="sponsor">Sponsor</string>
    <string name="add_referral">Add Referral</string>
    <string name="spinner">Spinner</string>
    <string name="select_your_handicap">Select Your handicap:</string>
    <string name="_1">1</string>
    <string name="_continue">Continue</string>
    <string name="subtotal">Subtotal</string>
    <string name="checkout">Checkout</string>
    <string name="select_your_gross_score">Select your gross score:</string>
    <string name="event_code">EVENT CODE</string>
    <string name="purchase_winning_ticket">Purchase Winning ticket</string>
    <string name="live_scoring">LIVE SCORING</string>
    <string name="silent_auctions">Silent Auctions</string>
    <string name="referrals">Referrals</string>
    <string name="add_new">Add New</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="user_role">User Role</string>
    <string name="no_referral_found">No Referral Found</string>
    <string name="watch_and_share">Watch and Share !</string>
    <string name="view_bidding_history">View Bidding History</string>
    <string name="watch">Watch</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="silent_auction">Silent Auction</string>
    <string name="event_name">Event Name</string>
    <string name="no_events_found">No Events found</string>
    <string name="view">VIEW</string>
    <string name="view_offer">VIEW OFFER</string>
    <string name="hole">Hole</string>
    <string name="yards">Yards</string>
    <string name="yards_to_center">YARDS TO CENTER</string>
    <string name="yards_to_front">YARDS TO FRONT</string>
    <string name="purchase_tickets">Purchase Tickets</string>
    <string name="your_winning_ticket_includes">Your Winning Ticket Includes</string>
    <string name="promotions">Promotions</string>
    <string name="push">Push</string>
    <string name="text">Text</string>
    <string name="email">Email</string>
    <string name="send_me_winning_ticket_news_and_offers">Send me Winning Ticket news and offers</string>
    <string name="events">Events</string>
    <string name="send_me_updates_on_upcoming_events">Send me updates on upcoming events</string>
    <string name="notify_me_24_hours_before_an_event">Notify me 24 hours before an event</string>
    <string name="auctions">Auctions</string>
    <string name="notify_me_before_an_event_begins">Notify me before an event begins</string>
    <string name="notify_me_when_an_auction_i_m_interested_in_is_sold">Notify me when an auction I\'m interested in is sold</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="billing_address">Billing Address</string>
    <string name="account_balance">Account Balance</string>
    <string name="total">Total</string>
    <string name="eagle">Eagle</string>
    <string name="current_balance">CURRENT BALANCE</string>
    <string name="password_instruction">Your password has been changed</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Re-Enter password</string>
    <string name="done">Done</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_confirmation">Please enter your email address and we\'ll send you a password reset email.</string>
    <string name="user_email_com">user@email.com</string>
    <string name="submit">Submit</string>
    <string name="bank_transfer">bank transfer</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="enter_your_event_code">ENTER YOUR EVENT CODE</string>
    <string name="select_your_starting_hole">Select your starting hole:</string>
    <string name="all">All</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="About_us">
<![CDATA[
<p><b>Winning Ticket</b> is the most efficient software platform for managing your charity and corporate golf tournaments or just regular day play. All the tools you need to host events and track your game right at the tip of your fingers.</p>
<p>Whether you\'re hosting a charity golf event to raise money for your charity or a team-building corporate event, <b>Winning Ticket\'s</b> mobile application has everything you need to host a perfect tournament that your participants will love.</p>

<p><b>Fully Customizable - </b>Build your <b>Winning Ticket</b> from a variety of features that will elevate your participant\'s experience.</p>

<p><b>Immediate Payouts - </b>All money is paid in full at the end of the event by immediate bank transfer at 11:59pm.</p>

<p><b>Transparent Accounting - </b>Event coordinators have full admin access for all transactions within the <b>Winning Ticket</b>. You\'ll receive email updates on pre-registration, registration and auction purchases in real-time.</p>

<p>ALL THE TOOLS YOU NEED TO MANAGE YOUR EVENT AND MAKE YOUR LIFE EASIER
Current event management software is not able to provide an environment that allows event organizers to have all of their tournament information in front of them. <b>Winning Ticket</b> lets you have complete control over your event and your money.</p>

<p>Walks</p> <p>Runs</p> <p>Galas</p> <p>Food festivals</p> <p>Concerts</p> <p>Private events</p> <p>Fishing</p> <p>Auctions</p>

]]>
</string>
    <string name="par">Par</string>
    <string name="net">Net</string>
    <string name="get_access_to_all_winning_ticket_features">GET ACCESS TO ALL WINNING TICKET FEATURES</string>
    <string name="virtual_gift_bags">VIRTUAL GIFT BAGS</string>
    <string name="multi_purpose_tickets">MULTI-PURPOSE TICKETS</string>
    <string name="first_name">First Name</string>
    <string name="child_hole">Hole</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_4_">4+</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="out">Out</string>
    <string name="gross">Gross</string>
    <string name="hcp">HCP</string>
    <string name="step_3">Step 3</string>
    <string name="yards_to_back">YARDS TO BACK</string>
    <string name="putts">Putts</string>
    <string name="scan_pay"><![CDATA[Scan & Pay]]></string>
</resources>