<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center"
        android:paddingBottom="@dimen/aboutus_padding"
        android:paddingTop="@dimen/aboutus_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:background="@color/color_gry"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvholes"
            android:text="@string/hole"
            android:layout_width="0dp"
            android:textSize="@dimen/linear_medium"
            android:gravity="center"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvpar"
            android:text="@string/par"
            android:layout_width="0dp"
            android:textSize="@dimen/linear_medium"
            android:gravity="center"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvgrassscore"
            android:text="@string/hcp"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="@dimen/linear_medium"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvdistance"
            android:text="@string/yards"
            android:layout_width="0dp"
            android:textSize="@dimen/linear_medium"
            android:gravity="center"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"/>

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvnetscore"
            android:text="@string/gross"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="@dimen/linear_medium"
            android:textColor="@color/colorwhite"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/tvhandicap"
            android:text="@string/net"
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/linear_medium"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>