<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginRight="@dimen/aboutus_padding"
    android:background="@drawable/map_dawble_bg"
    android:id="@+id/all_yards"
    android:padding="@dimen/edt_paddingleft"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv_total_distance"
        android:textSize="@dimen/edt_textsize"
        android:text="396"
        android:textColor="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/yards_to_back"
        android:layout_height="wrap_content"
        android:text="@string/yards_to_back"
        android:textColor="@color/mdtp_white"
        android:textSize="@dimen/text_size_score_event_new"/>

    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv_total_distance_center"
        android:textSize="@dimen/edt_textsize"
        android:text="390"
        android:textColor="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yards_to_center"
        android:text="@string/yards_to_center"
        android:textColor="@color/mdtp_white"
        android:textSize="@dimen/text_size_score_event_new"/>

    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv_total_distance_front"
        android:textSize="@dimen/edt_textsize"
        android:text="385"
        android:textColor="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yards_to_front"
        android:text="@string/yards_to_front"
        android:textColor="@color/mdtp_white"
        android:textSize="@dimen/text_size_score_event_new"/>
</LinearLayout>